src/test/rustdoc-ui/feature-gate-rustdoc_missing_doc_code_examples.stderr
error: unknown lint: `rustdoc::missing_doc_code_examples`
  --> $DIR/feature-gate-rustdoc_missing_doc_code_examples.rs:4:1
   |
LL | #![allow(rustdoc::missing_doc_code_examples)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/feature-gate-rustdoc_missing_doc_code_examples.rs:1:9
   |
LL | #![deny(unknown_lints)]
   |         ^^^^^^^^^^^^^
   = note: the `rustdoc::missing_doc_code_examples` lint is unstable
   = note: see issue #101730 <https://github.com/rust-lang/rust/issues/101730> for more information
   = help: add `#![feature(rustdoc_missing_doc_code_examples)]` to the crate attributes to enable

error: unknown lint: `rustdoc::missing_doc_code_examples`
  --> $DIR/feature-gate-rustdoc_missing_doc_code_examples.rs:4:1
   |
LL | #![allow(rustdoc::missing_doc_code_examples)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the `rustdoc::missing_doc_code_examples` lint is unstable
   = note: see issue #101730 <https://github.com/rust-lang/rust/issues/101730> for more information
   = help: add `#![feature(rustdoc_missing_doc_code_examples)]` to the crate attributes to enable

error: Compilation failed, aborting rustdoc

error: aborting due to 3 previous errors

